+ Finition du runProgram()
+ Implem delete action (row) et auto-alignement des boutons
+ Implet insertion action
+ ..... PLEIN DE CHOSES

## Version 18 : 23/05/17 ##
* Fix delete action
+ Debut ajout end screen
* Fix saut

## Version 19 : 23/05/17 ##
==== VERSION BUGUEE (normal)
.. Continuation (lol) de l'écran de fin d'execution

## Version 20 : 28/05/17 ##
+ Execution pas à pas avec indications
+ End screen avec messages

## Version 21 : 28/05/17 ##
+ Visuel saut
* Fix crash si on utilise pas P1 et/ou P2

## Verson 22 : 29/05/17 ##
* Fix qqes problèmes de chargement de police (grid)
* Qqes autres fix
+ positionToPixels()
+ début commentaire
* clean code

## Version 22 : 29/05/17 ##
* Fix bugs de couleurs quand on perd dans P1 et/ou P2
* Fin commentaires
* Plein de petits fix
* Améliorations de l'algo d'execution



#TODO:
(code ready in grid.cpp)
* If the file loads properly, check if the values are okay:
- correct fields (4 fields with 1 in the header..)
- pos x & y not too big
- light >1 show warning in console
- height >=0
* Method in interface that is called only on changing game state ( inits things -> remove m_frist_loop)
* Catch / exceptions handler when a line of a level is fuckedup
* FR TO ENGLISH IN APPLICATION;H
+ gestion win / lose (level selector)
+ COmmentaires
+ const type & variable où il faut
* clean code (trucs en commentaires, nombres magiques, ..)
+ description méthode au dessus de celle ci
+ ajouter niveaux
+ virer les todo
+ chaneg sprites 
+ renommer projet en interface en lightnbot
+ faire crédtis
+ remove editeur
+ programbox qui change de couleur en fonction du dernier element mis dedans
+ button change de couelur -> reset par défault fait des fois mais inutile


* AU lieu d'avoir plusieurs images vue de dessus, on en prend une et on
change la rotation
+ Ajouter gestion des appels récursifs à l'infini!! (cpt max ..)
+ Gestion lose / win
+ afficher le nom du niveau en haut du niveau

THROW EXCEPTION LVEL NAME WITH SPACE