@@ -20,6 +20,7 @@ const std::string Utils::FONT_PATH = "resources/fonts/";
 const std::string Utils::IMG_PATH = "resources/images/";
 const std::string Utils::LEVELS_PATH = "levels/";
 
+
 // Returns the absolute value of
 float Utils::abs(const float &value){
     if(value>0)
